# mlx_week5_gigglers

./: .env.example  .gitignore  README.md  action.py  audio_dataset.csv  commands.csv  dataprep.py  dataset.py  explore.ipynb  generate_audio.py  models.py  pyproject.toml  record.py  recordings.csv  requirements.txt  run_on_gpu.sh  sweep.py  sweep.yaml  train.py  urban_sound_classifier.py  utils.py  visualise.py  wandb_sweep.py  whisper_finetune.py  whisper_test.py
ProductivityCommands/: labels.csv  record.py  run_command.py  train_whisper.py
add_this/: README.md  labels.csv  requirements.txt  run_command2.py  setup.py
audio_commands/: finetune_whisper.py  record_ffmpeg.py  record_linux.py  run_command.py
ben_branch/: config.yml
ben_branch/notebooks/: download_data.ipynb  test_dataloader.ipynb
ben_branch/scratch/: gpu_test.py
ben_branch/scripts/: augmentations.py  cnn.py  dataloader.py  preprocess.py  spectrogram.py  train.py  transformer.py
ben_branch/whisper/: whisper.py
ben_branch/whisper/scratch/: download_model.py  explore_whispr.py  train_whspr_classifier.py
deployment/: deploy_classifier.py  record.py  requirements.txt  run_command.py
misc/: downsample.py  remove_16k_suffix.py
model/: augmentations.py  confusion_matrix.txt  dataset.py  download_model.py  explore_whispr.py  inference.py  model.py  train_whspr_classifier.py  train_with_augmentations_example.py
utils/: upload_to_huggingface.py  upload_to_merged.py
