[project]
name = "week5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "ipynb>=0.5.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "wandb>=0.21.0",
]
